[WIP] Nuts API Refactoring to better address evolution of the API #105